Set bold on read emails
