# backend/api/openapi.yaml
@@ -149,7 +149,7 @@ paths:
       parameters:
       - name: id
         in: path
-        description: The UUID of the email to retrieve
+        description: The UUID of the email to change
         required: true
         schema:
           type: string
@@ -162,7 +162,70 @@ paths:
           type: boolean
         style: form
       
+  /v0/read/{id}:
+    put:
+      description: Changes the starred status of the email by id
+      responses:
+        200:
+          description: Success
+        500:
+          description: Internal Server Error
+        400:
+          description: Incorrect request
+        404:
+          description: Email not found
+        default:
+          description: Unexpected Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      parameters:
+      - name: id
+        in: path
+        description: The UUID of the email to change
+        required: true
+        schema:
+          type: string
+        style: simple
+      - name: read
+        in: query
+        description: The new starred status of the email
+        required: true
+        schema:
+          type: boolean
+        style: form
 
+  /v0/read:
+    get:
+      description: Get the number of unread emails in mailbox
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: integer
+                format: int32
+        404:
+          description: Mailbox not found
+        500:
+          description: Internal Server error
+        default:
+          description: Unexpected Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      parameters:
+      - name: mailbox
+        in: query
+        description: The destination mailbox for the email
+        required: false
+        schema:
+          type: string
+        style: form
+        
 
 components:
   schemas:
